examples/path_collision_detection/test/fixtures/ingress02_external.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: external-service02
  annotations:
    kubernetes.io/ingress.class: kong-kic1
  namespace: service02
spec:
  rules:
    - host: www.test.example.com
      http:
        paths:
          - path: /mock
            backend:
              serviceName: service02
              servicePort: 80
