examples/path_collision_detection/test/fixtures/ingress03_patch_external.yaml
---
spec:
  rules:
    - host: www.test.example.com
      http:
        paths:
          - path: /mock
            backend:
              serviceName: service03
              servicePort: 80
